[gd_scene load_steps=4 format=2]

[ext_resource path="res://src/UI/hud/scripts/crafting_HUD.gd" type="Script" id=1]
[ext_resource path="res://assets/themes/crafting_menu_theme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/main_font_small.tres" type="DynamicFont" id=3]

[node name="crafting_HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -112.0
margin_top = -40.0
margin_right = 16.0
margin_bottom = 40.0
rect_min_size = Vector2( 128, 80 )
custom_constants/separation = 16
__meta__ = {
"_edit_group_": true
}

[node name="inventory_panel" type="Panel" parent="VBoxContainer"]
margin_right = 128.0
margin_bottom = 32.0
rect_min_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="VBoxContainer/inventory_panel"]
margin_top = -16.0
margin_right = 128.0
theme = ExtResource( 2 )
text = "Inventory"

[node name="inventory_list" type="ItemList" parent="VBoxContainer/inventory_panel"]
margin_right = 128.0
margin_bottom = 32.0
select_mode = 1
max_columns = 8
same_column_width = true
fixed_column_width = 16
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="crafting_panel" type="Panel" parent="VBoxContainer"]
margin_top = 48.0
margin_right = 128.0
margin_bottom = 80.0
rect_min_size = Vector2( 0, 32 )

[node name="Label" type="Label" parent="VBoxContainer/crafting_panel"]
margin_top = -16.0
margin_right = 128.0
theme = ExtResource( 2 )
text = "Crafting"

[node name="crafting_list" type="ItemList" parent="VBoxContainer/crafting_panel"]
margin_right = 128.0
margin_bottom = 32.0
max_columns = 8
same_column_width = true
fixed_column_width = 16
icon_mode = 0
fixed_icon_size = Vector2( 16, 16 )

[node name="craft" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -48.0
margin_top = -24.0
margin_right = -7.0
margin_bottom = -4.0
rect_pivot_offset = Vector2( 41, 20 )
theme = ExtResource( 2 )
text = "Craft"

[node name="Panel" type="Panel" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -96.0
margin_top = 16.0
margin_right = -16.0
margin_bottom = 112.0

[node name="description" type="Label" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 16.0
margin_top = -24.0
margin_right = 192.0
margin_bottom = -4.0
theme = ExtResource( 2 )
custom_fonts/font = ExtResource( 3 )
text = "Double click items to craft items "
align = 1
valign = 1
autowrap = true
[connection signal="item_activated" from="VBoxContainer/inventory_panel/inventory_list" to="." method="_on_inventory_list_item_activated"]
[connection signal="item_activated" from="VBoxContainer/crafting_panel/crafting_list" to="." method="_on_crafting_list_item_activated"]
[connection signal="pressed" from="craft" to="." method="_on_craft_pressed"]
